# Hawk-tui

./: .cursorrules  .gitignore  Cargo.toml  FILE.MANIFEST.txt  GIT.BASE.ROUTING.md  HAWK-TUI.SPEC.md  ISSUE.REPORT.context-loss.md  LICENSE  README.md  REPO.INFO.md  SESSION.AUDIT.2025-10-09.md  STATUS.REPORT.⧗-25.61.md  TODO.md  auto-sync-to-ops.ps1  hawk_tui.py  run.sh
!WORKDESK/Agent.Staging/: test.file.md  test.job.txt  test.receipts.job.txt
!WORKDESK/MASTER.PLAN/: RABBITMQ.COORDINATOR.md
!WORKDESK/Worktrees/: .agent-task-queue.md  AGENT_DELEGATION_GUIDE.md  MULTI_AGENT_COLLAB_GUIDE.md  MULTI_AGENT_TEST_SUITE.md  README.md  (+9 more)
.3ox/: 3ox  BUILD.Dispatch.Refactor.md  CURSOR.API.NOTE.md  CURSOR.API.SOLVED.md  CURSOR.REPO.SETUP.md  GIT.PUSH.SUMMARY.md  INTEGRATION.Cursor.Telegram.md  INTEGRATION.Imprint.Dispatch.md  WORKFLOW.Complete.md  run.rb  test.workflow.rb  tools.yml
1n3ox-temp/: README.md
HOLODECK/: .gitignore  verify.sh
adapters/: daemon_ctl.sh  grpc_health.sh  systemd_status.sh
conf/: 3ox.grpc.targets  grpc.targets.example  systemd_units.txt
crates/hawk/: Cargo.toml
crates/hawk/src/: app.rs  awk.rs  doctor.rs  io.rs  main.rs  packs.rs  ui.rs
crates/hawk/src/ui/: draw.rs
crates/hawkd/: Cargo.toml
crates/hawkd/src/: grpc_health.rs  main.rs  systemd.rs  unix_ingest.rs
docs/: AGENTIC_TUI_DEEP_DIVE.md  HAWK.AWK.BOOK.md  INDEX.md  ONBOARDING.md  SPECS.md  STYLE_OPTIONS.md  awk_command_book.md  hawkd.service  hawkd_tls_mtls.md
shell/: emit_fake_activity.sh  init_fake_env.sh  run_fake.sh  verify.sh
shims/: 3ox.sh  example.sh
tui2go/: README.md
(+154 files in other folders)
