# ▛▞// hawk tui crate :: hawk.toml
# @ctx ⫸ [ratatui.stdin.mirror]
[package]
name = "hawk"
version = "0.1.0"
edition = "2021"

[dependencies]
hawk_core = { path = "../hawk_core" }

clap = { version = "4.5", features = ["derive"] }

ratatui = "0.26"
crossterm = "0.27"

time = { version = "0.3", features = ["formatting"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# :: ∎
